gcc/testsuite/rust/rustc/ui/derives/deriving-meta-empty-trait-list.rs
#![deny(unused)]

#[derive()] // { dg-error "" "" { target *-*-* } }
struct _Bar;

pub fn main() {}

